--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=4000
-MONGO_URI='mongodb+srv://alaoabiodun:alao1996@cluster0.jbxby.mongodb.net/shopping-db?retryWrites=true&w=majority'
-JWT_SECRET='customer_secretKey'
+PORT=
+MONGO_URI=
+JWT_SECRET=
